@@ -1,3 +1,9 @@
+Fri Oct 22 11:39:15 UTC 2010  Marcel Smit  <msmit@remedy.nl>
+
+        * connectors/ami4ccm/tutorials/Hello/Tutorial/Code/GeneratedExec/Hello_MyFoo_objA_conn_i.h:
+        * connectors/ami4ccm/tutorials/Hello/Tutorial/Code/GeneratedExec/Hello_MyFoo_objA_conn_i.cpp:
+          Added generated implementation of the Reply Handler
+
 Fri Oct 22 11:20:59 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * connectors/dds4ccm/impl/Publisher_T.cpp:
